--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -295,7 +295,7 @@
 
 <!ENTITY Ctr_toolbars		"Nastajenja symboloweje lajsty">
 <!ENTITY Ctr_dblclnewtab	"Dwójne kliknjenje na symbolowu lajstu wočinja nowy rajtark">
-<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
+<!ENTITY Ctr_dblclnewtabdes	"Njepřihódny za wšě dospołne drasty, mjeztym zo titulna lajsta Windows je aktiwna.">
 <!ENTITY Ctr_hidetbwot		"Rajtarkowu lajstu z jenož jednym rajtarkom schować">
 <!ENTITY Ctr_hidetbwote		"Komdźenje chowanja při startowanju redukować">
 <!ENTITY Ctr_hidetbwote_i	"To móhło brachi na rajtarkowej lajsće zawinować">
@@ -386,12 +386,12 @@
 <!ENTITY Ctr_special_font	"Nastajenja za pozadkowu barbu su jenož za standardnu drastu!">
 <!ENTITY Ctr_special_info	"Někotre nastajenja snano wizuelne změny nic we wšěch padach poskićeja!">
 <!ENTITY Ctr_special_info2	"Drasta třećeho poskićowarja je so wotkryła! Někotre nastajenja z drastami třećich poskićowarjow njefunguja!">
-<!ENTITY Ctr_special_acr	"Only report issues through official support channels and not by using 'Add-on Compatibility Reporter'!">
-<!ENTITY Ctr_support		"Support">
-<!ENTITY Ctr_support_forum1	"MozillaZine (English forum)">
-<!ENTITY Ctr_support_forum2	"Camp Firefox (German forum)">
-<!ENTITY Ctr_github_issues	"Report issue on Github">
-<!ENTITY Ctr_newversion		"Check for new version">
+<!ENTITY Ctr_special_acr	"Zdźělće problemy jenož přez oficielne podpěranske kanale a nic přez 'Add-on Compatibility Reporter'!">
+<!ENTITY Ctr_support		"Pomoc">
+<!ENTITY Ctr_support_forum1	"MozillaZine (jendźelski forum)">
+<!ENTITY Ctr_support_forum2	"Camp Firefox (němski forum)">
+<!ENTITY Ctr_github_issues	"Problem na Github zdźělić">
+<!ENTITY Ctr_newversion		"Za nowej wersiju pytać">
 
 <!ENTITY Ctr_addon-bar.accesskey		"d">
 <!ENTITY appMenuGettingStarted.label	"Prěnje kroki">
