--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -299,7 +299,7 @@
 <!ENTITY Ctr_hidetbwot		"Skrývat lištu s pouze jedním panelem">
 <!ENTITY Ctr_hidetbwote		"Snížení prodlevy skrytí při spouštění">
 <!ENTITY Ctr_hidetbwote_i	"Může způsobit chyby na liště panelů">
-<!ENTITY Ctr_hidetbwote2	"Zachovat lištu záhlaví (panely nahoře)">
+<!ENTITY Ctr_hidetbwote2	"Automatically adjust titlebar space">
 <!ENTITY Ctr_notabfog		"Odstranit zamlžené pozadí (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Odstranit barvu pozadí (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Zmenšit prostor nad lištou nástrojů (pokud lze)">
