--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -299,7 +299,7 @@
 <!ENTITY Ctr_hidetbwot		"Skjul fanebladslinjen når der kun er ét faneblad">
 <!ENTITY Ctr_hidetbwote		"Reducér forsinkelse ved skjulning under opstart">
 <!ENTITY Ctr_hidetbwote_i	"Kan give fejl på fanebladenes værktøjslinje">
-<!ENTITY Ctr_hidetbwote2	"Bevar titellinje (faneblade øverst)">
+<!ENTITY Ctr_hidetbwote2	"Automatically adjust titlebar space">
 <!ENTITY Ctr_notabfog		"Fjern baggrundståge (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Fjern baggrundsfarve (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Reducér mellemrum over værktøjslinje (hvis det er muligt)">
