--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -299,7 +299,7 @@
 <!ENTITY Ctr_hidetbwot		"Leiste mit nur einem sichtbaren Tab verstecken">
 <!ENTITY Ctr_hidetbwote		"Verzögerung beim Start reduzieren">
 <!ENTITY Ctr_hidetbwote_i	"Hintergrundfarbe der Tableiste könnte fehlerhaft sein.">
-<!ENTITY Ctr_hidetbwote2	"Titelleiste beibehalten (Tabs oben)">
+<!ENTITY Ctr_hidetbwote2	"Titelleistenabstand automatisch anpassen">
 <!ENTITY Ctr_notabfog		"Hintergrundnebel entfernen (Windows Aero Glass / Windows 8)">
 <!ENTITY Ctr_notabbg		"Hintergrundfarbe entfernen (Windows Aero Glass / Windows 8)">
 <!ENTITY Ctr_hightabpos		"Oberen Leistenabstand reduzieren (falls möglich)">
