--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -299,7 +299,7 @@
 <!ENTITY Ctr_hidetbwot		"Ocultar barra de pestañas con una sola pestaña visible">
 <!ENTITY Ctr_hidetbwote		"Reducir retardo al ocultar en el inicio">
 <!ENTITY Ctr_hidetbwote_i	"Podría causar problemas en la barra de pestañas">
-<!ENTITY Ctr_hidetbwote2	"Conservar barra de título (pestañas arriba)">
+<!ENTITY Ctr_hidetbwote2	"Automatically adjust titlebar space">
 <!ENTITY Ctr_notabfog		"Eliminar niebla de fondo (Windows Aeroglass/8)">
 <!ENTITY Ctr_notabbg		"Eliminar color de fondo (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Reducir espacio sobre la barra de herramientas (si es posible)">
