--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -299,7 +299,7 @@
 <!ENTITY Ctr_hidetbwot		"Ainult ühe nähtava kaardi korral peida kaartide riba">
 <!ENTITY Ctr_hidetbwote		"Vähenda peitmise viivitust käivitumisel">
 <!ENTITY Ctr_hidetbwote_i	"Võib põhjustada kaartide riba tõrkeid">
-<!ENTITY Ctr_hidetbwote2	"Säilita tiitliriba (kaardid peal)">
+<!ENTITY Ctr_hidetbwote2	"Automatically adjust titlebar space">
 <!ENTITY Ctr_notabfog		"Eemalda taustaudu (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Eemalda taustavärv (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Vähenda tööriistariba kohal olevat tühja ruumi (kui võimalik)">
