--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -299,7 +299,7 @@
 <!ENTITY Ctr_hidetbwot		"Nascondi la barra delle schede quando è aperta una sola scheda">
 <!ENTITY Ctr_hidetbwote		"Velocizza la scomparsa della barra all’avvio">
 <!ENTITY Ctr_hidetbwote_i	"Potrebbe causare anomalie nella barra delle schede">
-<!ENTITY Ctr_hidetbwote2	"Mantieni la barra del titolo (schede in alto)">
+<!ENTITY Ctr_hidetbwote2	"Automatically adjust titlebar space">
 <!ENTITY Ctr_notabfog		"Disattiva l’effetto nebbia (Windows AeroGlass e Win8)">
 <!ENTITY Ctr_notabbg		"Rimuovi colore di sfondo (Windows AeroGlass e Win8)">
 <!ENTITY Ctr_hightabpos		"Quando possibile, riduci lo spazio sopra le barre">
