--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -299,7 +299,7 @@
 <!ENTITY Ctr_hidetbwot		"タブがひとつの時はタブバーを隠す">
 <!ENTITY Ctr_hidetbwote		"起動時に非表示になるまでの遅延を減少させる">
 <!ENTITY Ctr_hidetbwote_i	"タブバーに不具合が発生する可能性があります。">
-<!ENTITY Ctr_hidetbwote2	"タイトルバーを維持する (タブが上部の時)">
+<!ENTITY Ctr_hidetbwote2	"Automatically adjust titlebar space">
 <!ENTITY Ctr_notabfog		"背景のぼかしを取り除く (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_notabbg		"背景色を取り除く (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_hightabpos		"ツールバーの上部の間隔を減らす (可能ならば)">
