--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -299,7 +299,7 @@
 <!ENTITY Ctr_hidetbwot		"Ocultar as barras de abas com uma aba">
 <!ENTITY Ctr_hidetbwote		"Reduzir o atraso ao ocultar na inicialização">
 <!ENTITY Ctr_hidetbwote_i	"Could cause glitches on tabs toolbar">
-<!ENTITY Ctr_hidetbwote2	"Keep titlebar (tabs on top)">
+<!ENTITY Ctr_hidetbwote2	"Automatically adjust titlebar space">
 <!ENTITY Ctr_notabfog		"Remover a névoa do fundo (Windows AeroGlass/Win8)">
 <!ENTITY Ctr_notabbg		"Remover a cor do fundo (Windows AeroGlass/Win8)">
 <!ENTITY Ctr_hightabpos		"Reduzir o espaço acima da barra (se possível)">
