--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -299,7 +299,7 @@
 <!ENTITY Ctr_hidetbwot		"Masquer la barre lorsqu'un seul onglet est visible">
 <!ENTITY Ctr_hidetbwote		"Diminuer le délai pour masquer la barre au démarrage">
 <!ENTITY Ctr_hidetbwote_i	"Pourrait provoquer des défauts sur la barre des onglets">
-<!ENTITY Ctr_hidetbwote2	"Conserver la barre de titre (onglets au-dessus)">
+<!ENTITY Ctr_hidetbwote2	"Automatically adjust titlebar space">
 <!ENTITY Ctr_notabfog		"Enlever le brouillard (Aero Glass de Windows/Windows 8)">
 <!ENTITY Ctr_notabbg		"Enlever la couleur d'arrière-plan (Aero Glass de Windows/Windows 8)">
 <!ENTITY Ctr_hightabpos		"Réduire l'espace supérieur (si possible)">
