--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -187,11 +187,11 @@
 <!ENTITY Ctr_hiderecentbm	"Lesezeichen-Pop-up: zuletzt hinzugefügte Lesezeichen verstecken">
 <!ENTITY Ctr_hideeditbm		"Lesezeichen-Stern: Pop-up verstecken (wenn Seite noch kein Lesezeichen ist)">
 <!ENTITY Ctr_bmbutpanelm	"Aufklappmenü: 'Panel'-Darstellung">
-<!ENTITY Ctr_bmbunsortbm	"Aufklappmenü: 'Unsortierte Lesezeichen'-Menü anzeigen">
+<!ENTITY Ctr_bmbunsortbm	"Aufklappmenü: 'Weitere Lesezeichen'-Menü anzeigen">
 <!ENTITY Ctr_bmbunsortbm2	"Menü über den Lesezeichen">
 <!ENTITY Ctr_bmbviewbmsb	"Aufklappmenü: 'Lesezeichen-Seitenleiste' anzeigen">
 <!ENTITY Ctr_bmbviewbmtb	"Aufklappmenü: 'Lesezeichen-Symbolleiste' anzeigen">
-<!ENTITY Ctr_bmbnounsort	"Aufklappmenü: 'Unsortierte Lesezeichen' verstecken">
+<!ENTITY Ctr_bmbnounsort	"Aufklappmenü: 'Weitere Lesezeichen' verstecken">
 <!ENTITY Ctr_bmbutnotext	"Text auch auf der Lesezeichen-Symbolleiste verstecken">
 <!ENTITY Ctr_skipprintpr	"Drucken-Schaltfläche: Druckvorschau überspringen">
 <!ENTITY Ctr_tbconmenu		"Leistenkontextmenü: 'In Menü verschieben', 'Aus Symbolleiste entfernen', 'Alle Tabs neu laden', 'Lesezeichen für alle Tabs hinzufügen …' und 'Geschlossenen Tab wiederherstellen' verstecken">
