--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -187,11 +187,11 @@
 <!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
 <!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
 <!ENTITY Ctr_bmbutpanelm	"Popup: panel menu appearance">
-<!ENTITY Ctr_bmbunsortbm	"Popup: 'Unsorted Bookmarks' menu">
+<!ENTITY Ctr_bmbunsortbm	"Popup: 'Other Bookmarks' menu">
 <!ENTITY Ctr_bmbunsortbm2	"Menu above bookmarks">
 <!ENTITY Ctr_bmbviewbmsb	"Popup: show 'View Bookmarks Sidebar'">
 <!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Bookmarks Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"Popup: hide 'Unsorted Bookmarks'">
+<!ENTITY Ctr_bmbnounsort	"Popup: hide 'Other Bookmarks'">
 <!ENTITY Ctr_bmbutnotext	"Hide label on bookmarks bar">
 <!ENTITY Ctr_skipprintpr	"Print button: skip print preview">
 <!ENTITY Ctr_tbconmenu		"Toolbar context menu: hide 'move to menu', 'remove from toolbar', 'reload/bookmark all tabs' and 'undo close tab'">
