--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -398,6 +398,7 @@
 <!ENTITY goCmd.label					"Los">
 <!ENTITY Ctr_menu_restart.label			"Neustarten">
 <!ENTITY Ctr_restartapp					"'Neustarten'-Eintrag im '&brandShortName;'- und 'Datei-Menü'">
+<!ENTITY Ctr_ctrnewinv					"Neue Einstellungen in aktueller &brandShortName; Version unterstreichen">
 
 <!ENTITY Ctr_openInCurrentTab			"Eingabe im aktiven Tab öffnen">
 <!ENTITY Ctr_openInNewTab				"Eingabe in neuem Tab öffnen">
