--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -299,7 +299,7 @@
 <!ENTITY Ctr_hidetbwot		"Ocultar barra de pestañas con una sola pestaña visible">
 <!ENTITY Ctr_hidetbwote		"Reducir retardo al ocultar en el inicio">
 <!ENTITY Ctr_hidetbwote_i	"Podría causar problemas en la barra de pestañas">
-<!ENTITY Ctr_hidetbwote2	"Automatically adjust titlebar space">
+<!ENTITY Ctr_hidetbwote2	"Ajustar automáticamente el espacio de la barra de título">
 <!ENTITY Ctr_notabfog		"Eliminar niebla de fondo (Windows Aeroglass/8)">
 <!ENTITY Ctr_notabbg		"Eliminar color de fondo (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Reducir espacio sobre la barra de herramientas (si es posible)">
@@ -398,6 +398,7 @@
 <!ENTITY goCmd.label					"Ir">
 <!ENTITY Ctr_menu_restart.label			"Reiniciar">
 <!ENTITY Ctr_restartapp					"'Reiniciar' en el menú de &brandShortName; y el menú 'Archivo'">
+<!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
 
 <!ENTITY Ctr_openInCurrentTab			"Abrir entradas en la pestaña actual">
 <!ENTITY Ctr_openInNewTab				"Abrir entradas en una nueva pestaña">
