--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -398,6 +398,7 @@
 <!ENTITY goCmd.label					"Start">
 <!ENTITY Ctr_menu_restart.label			"Znowa startować">
 <!ENTITY Ctr_restartapp					"Znowa startować w meniju '&brandShortName;' a w meniju 'Dataja' pokazać">
+<!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
 
 <!ENTITY Ctr_openInCurrentTab			"Zapodaća w aktualnym rajtarku wočinić">
 <!ENTITY Ctr_openInNewTab				"Zapodaća w nowym rajtarku wočinić">
