--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -398,6 +398,7 @@
 <!ENTITY goCmd.label					"Pojdi">
 <!ENTITY Ctr_menu_restart.label			"Ponovno zaženi">
 <!ENTITY Ctr_restartapp					"'Ponovno zaženi' v programskem meniju in meniju Datoteka">
+<!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
 
 <!ENTITY Ctr_openInCurrentTab			"Odpri vnose v trenutnem zavihku">
 <!ENTITY Ctr_openInNewTab				"Odpri vnose v novem zavihku">
