--- a/xpi/locale/zh-CN/options_zh-cn.dtd
+++ b/xpi/locale/zh-CN/options_zh-cn.dtd
@@ -398,6 +398,7 @@
 <!ENTITY goCmd.label					"转到">
 <!ENTITY Ctr_menu_restart.label			"重启">
 <!ENTITY Ctr_restartapp					"在应用菜单和文件菜单中显示 “重启”">
+<!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
 
 <!ENTITY Ctr_openInCurrentTab			"在当前标签页打开输入">
 <!ENTITY Ctr_openInNewTab				"在新标签页打开输入">
