--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -23,7 +23,7 @@
 <!ENTITY Ctr_cuiico			"Ikony">
 <!ENTITY Ctr_cuiicotxt		"Ikony i tekst">
 <!ENTITY Ctr_cuitxt			"Tekst">
-<!ENTITY Ctr_cuitabsnontop	"Karty nieu na górze">
+<!ENTITY Ctr_cuitabsnontop	"Karty nie na górze">
 
 <!ENTITY Ctr_tnot			"(karty nie na górze)">
 
